# codex

./: MODULE.bazel  README.md
.github/actions/prepare-bazel-ci/: action.yml
.github/scripts/: run-bazel-ci.sh
.github/workflows/: bazel.yml
codex-rs/: Cargo.toml  deny.toml
codex-rs/.cargo/: audit.toml
codex-rs/analytics/src/: analytics_client_tests.rs  client.rs  events.rs  facts.rs  lib.rs  reducer.rs
codex-rs/app-server/: BUILD.bazel  Cargo.toml  README.md
codex-rs/app-server-client/src/: lib.rs
codex-rs/app-server/src/: bespoke_event_handling.rs  codex_message_processor.rs  config_api.rs  external_agent_config_api.rs  in_process.rs  lib.rs  message_processor.rs
codex-rs/apply-patch/src/: lib.rs  parser.rs
codex-rs/backend-client/src/: client.rs
codex-rs/chatgpt/src/: connectors.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: login.rs  main.rs  marketplace_cmd.rs  mcp_cmd.rs  responses_cmd.rs
codex-rs/cli/tests/: marketplace_add.rs  marketplace_upgrade.rs
codex-rs/code-mode/: Cargo.toml
codex-rs/code-mode/src/: description.rs  lib.rs  service.rs
codex-rs/codex-api/src/: lib.rs
codex-rs/codex-client/src/: chatgpt_cookies.rs  chatgpt_hosts.rs  lib.rs
codex-rs/codex-mcp/src/: mcp_connection_manager.rs  mcp_connection_manager_tests.rs
codex-rs/config/src/: config_requirements.rs  config_toml.rs  lib.rs  marketplace_edit.rs  mcp_edit.rs  mcp_edit_tests.rs  mcp_types.rs  mcp_types_tests.rs  types.rs
codex-rs/core/: Cargo.toml  config.schema.json
codex-rs/core-skills/: Cargo.toml
codex-rs/core/src/: agent_identity.rs  apply_patch.rs  codex.rs  codex_delegate.rs  codex_delegate_tests.rs  codex_tests.rs  codex_tests_guardian.rs  codex_thread.rs  compact.rs  connectors.rs  connectors_tests.rs  exec.rs  exec_tests.rs  hook_runtime.rs  (+25 more)
codex-rs/exec-server/: BUILD.bazel
codex-rs/protocol/: Cargo.toml
codex-rs/sandboxing/: Cargo.toml
codex-rs/thread-store/: BUILD.bazel  Cargo.toml  build.rs
codex-rs/thread-store/src/: lib.rs  types.rs
codex-rs/thread-store/src/local/: mod.rs
codex-rs/thread-store/src/remote/: mod.rs
codex-rs/thread-store/src/remote/proto/: codex.thread_store.v1.proto  codex.thread_store.v1.rs
docs/: config.md
notes/: pr17387-agent-task-persistence-assumption.md
(+284 files in other folders)
